test/fixtures/errors/test-no-extra-info-on-fatal-exception.snapshot
*test-no-extra-info-on-fatal-exception.js:7
throw new Error('foo');
^

Error: foo
    at Object.<anonymous> (*test-no-extra-info-on-fatal-exception.js:7:7)
